Added api /triggersstatus
