# docs/swagger.json
@@ -36,7 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/dto.ExternalUserDto"
                         }
                     }
                 ],
@@ -208,6 +208,46 @@
                     },
                     "500": {
                         "description": "Not found"
+                    }
+                }
+            }
+        },
+        "/getexternaluser/{organizationRef}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyToken": []
+                    }
+                ],
+                "description": "Return the organization e-mail list of External Users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Organization"
+                ],
+                "summary": "Get a list of External Users e-mails",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organization Name",
+                        "name": "organizationRef",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "bad request"
                     }
                 }
             }
@@ -411,7 +451,7 @@
                         "ApiKeyToken": []
                     }
                 ],
-                "description": "Obtain a full report of all organizations",
+                "description": "Obtain a full report of all organizations. If the \"onlyowner\" query parameter is specified, only the organizations the user owns will be listed.",
                 "produces": [
                     "application/json"
                 ],
@@ -419,6 +459,15 @@
                     "Organization"
                 ],
                 "summary": "Get Report",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "?onlyowner",
+                        "name": "onlyowner",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "ok",
@@ -520,7 +569,7 @@
                         "ApiKeyToken": []
                     }
                 ],
-                "description": "Restartr timers",
+                "description": "Restart timers",
                 "produces": [
                     "application/json"
                 ],
@@ -593,6 +642,28 @@
                     }
                 }
             }
+        },
+        "/triggersstatus": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyToken": []
+                    }
+                ],
+                "description": "Get triggers status",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Triggers"
+                ],
+                "summary": "get triggers status",
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -629,20 +700,11 @@
         "dto.ConfigTriggersDto": {
             "type": "object",
             "properties": {
-                "discoveryRunFailedTriggerLastRun": {
-                    "type": "string"
-                },
-                "organizationsTriggerLastRun": {
-                    "type": "string"
-                },
                 "organizationsTriggerTime": {
                     "type": "integer"
                 },
                 "runFailedTriggerTime": {
                     "type": "integer"
-                },
-                "usersTriggerLastRun": {
-                    "type": "string"
                 },
                 "usersTriggerTime": {
                     "type": "integer"
@@ -716,6 +778,14 @@
             "type": "object",
             "properties": {
                 "errorCode": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.ExternalUserDto": {
+            "type": "object",
+            "properties": {
+                "email": {
                     "type": "string"
                 }
             }
